fix layout on mobile

--- a/styles.css
+++ b/styles.css
@@ -401,28 +401,28 @@ textarea {
     }
 
     .item-1 {
-        grid-row: 1 / 2;
+        grid-row: 1;
     }
     .item-2 {
-        grid-row: 2 / 4;
+        grid-row: 2;
     }
     .item-3 {
-        grid-row: 4 / 5;
+        grid-row: 3;
     }
     .item-4 {
-        grid-row: 5 / 7;
+        grid-row: 4;
     }
     .item-5 {
-        grid-row: 7 / 8;
+        grid-row: 6;
     }
     .item-6 {
-        grid-row: 8 / 9;
+        grid-row: 5;
     }
     .item-7 {
-        grid-row: 9 / 10;
+        grid-row: 7;
     }
     .item-8 {
-        grid-row: 10 / 11;
+        grid-row: 8;
     }
 
     .contact {
